// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message ShareNameIdent {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  // The user this share belongs to
  string tenant = 1;

  // share name
  string share_name = 2;
}

message ShareDatabaseObject {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  // The user this db belongs to
  string tenant = 1;

  // Database name
  string db_name = 2;

  uint64 db_id = 3;
}

message ShareTableObject {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  // The user this table belongs to.
  string tenant = 1;

  // The database this table belongs to.
  string db_name = 2;

  // The table name.
  string table_name = 3;

  uint64 table_id = 4;
}

message ShareGrantObject {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  oneof object {
    ShareDatabaseObject database = 1;
    ShareTableObject table = 2;
  }
}

message ShareGrantEntry {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  ShareGrantObject object = 1;
  uint64 privileges = 2;
}

message ShareMeta {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  optional ShareDatabaseObject database = 1;
  repeated ShareGrantEntry entries = 2;
  repeated string accounts = 3;
  optional string comment = 4;
  string share_on = 5;
  optional string update_on = 6;
}

// The identifier of a share.
// `share_id` will never change. It can only be created or removed.
// The `seq` indicates changes of the instance.
// I.e., the tuple `(db_id, seq)` always identifies the same instance.
message ShareIdent {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  uint64 share_id = 1;

  // The seq of TableMeta
  uint64 seq = 2;
}

message ShareInfo {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  ShareIdent ident = 1;
  ShareNameIdent name_ident = 2;
  ShareMeta meta = 3;
}